--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,18 +1,27 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: Verify Pull Request
+
+on:
+  pull_request:
+    types: [opened, edited, reopened]
+
 jobs:
-  Explore-GitHub-Actions:
+  verify:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Get changed files
+        id: changes
+        run: echo "::set-output name=files::$(jq -r '.pull_request.changed_files' $GITHUB_EVENT_PATH)"
+
+      - name: Check for sysout
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          # Get changed files
+          changed_files="${{ steps.changes.outputs.files }}"
+          
+          # Look for 'sysout' in changed files
+          for file in $changed_files; do
+            grep -qi 'sysout' $file && echo "sysout found in $file"
+          done
