--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -1,16 +1,28 @@
-name: Verify Pull Request
+name: CI
 
 on:
   pull_request:
-    types: [opened, edited, reopened]
+    branches:
+      - main
 
 jobs:
-  verify:
-    runs-on: ubuntu-latest
+  # -------------------------------------------------------------
+  # Event `pull_request`: Returns all changed pull request files.
+  # --------------------------------------------------------------
+  changed_files:
+    # NOTE:
+    # - This is limited to pull_request* events and would raise an error for other events.
+    # - A maximum of 3000 files can be returned.
+    # - For more flexibility and no limitations see "Using local .git history" above.
+
+    runs-on: ubuntu-latest  # windows-latest || macos-latest
+    name: Test changed-files
     permissions:
       pull-requests: read
+
     steps:
-      - name: Checkout code
+      - name: Get changed files
+        id: changed-files
         uses: tj-actions/changed-files@v40
 
       - name: List all changed files
