--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -13,15 +13,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get changed files
-        id: changes
-        run: echo "::set-output name=files::$(jq -r '.pull_request.changed_files' $GITHUB_EVENT_PATH)"
+        id: git_changes
+        run: echo "::set-output name=files::$(git diff --name-only HEAD^..HEAD)"
 
       - name: Check for sysout
         run: |
-          # Get changed files
-          changed_files="${{ steps.changes.outputs.files }}"
-          
-          # Look for 'sysout' in changed files
-          for file in $changed_files; do
-            grep -qi 'sysout' $file && echo "sysout found in $file"
+          files="${{ steps.git_changes.outputs.files }}"
+          for file in $files; do
+            if grep -q 'sysout' "$file"; then
+              echo "sysout found in $file"
+              exit 1
+            fi
           done
