--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -2,26 +2,31 @@ name: CI
 
 on:
   pull_request:
-    types: [opened, edited, reopened]
+    branches:
+      - main
 
 jobs:
-  verify:
-    runs-on: ubuntu-latest
+  # -------------------------------------------------------------
+  # Event `pull_request`: Returns all changed pull request files.
+  # --------------------------------------------------------------
+  changed_files:
+    # NOTE:
+    # - This is limited to pull_request* events and would raise an error for other events.
+    # - A maximum of 3000 files can be returned.
+    # - For more flexibility and no limitations see "Using local .git history" above.
+
+    runs-on: ubuntu-latest  # windows-latest || macos-latest
+    name: Test changed-files
+    permissions:
+      pull-requests: read
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Get changed files
-        id: git_changes
-        run: echo "::set-output name=files::$(git diff --name-only HEAD^..HEAD)"
+        id: changed-files
+        uses: tj-actions/changed-files@v40
 
-      - name: Check for sysout
+      - name: List all changed files
         run: |
-          files="${{ steps.git_changes.outputs.files }}"
-          for file in $files; do
-            if grep -q 'sysout' "$file"; then
-              echo "sysout found in $file"
-              exit 1
-            fi
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            grep -qi 'sysout' $file && echo "sysout found in $file"
           done
